# ISKG

./: .gitignore  AGENTS.md  CHANGELOG.md  ParaISKG.md  README.md  coverage.json  opencode.jsonc  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docs/_static/css/: ifaz.css
examples/: d.py  demo.py  widget_demo.py
iskg/: __init__.py  _vendor.py  app.py  base.py  fonts.py  layout.py  template.py  theme.py  themes.py  vars.py  widgets.py
iskg/widgets/: __init__.py  _canvas.py  _containers.py  _controls.py  _data.py  _dialogs.py  _display.py  _menus.py  _misc.py  _text.py
tests/: test_app.py  test_base.py  test_imports.py  test_stress.py  test_themes.py  test_vars.py  test_widget.py  test_widgets_containers.py  test_widgets_controls.py  test_widgets_data.py  test_widgets_dialogs.py  test_widgets_display.py  test_widgets_text_canvas_misc.py
