[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "iskg"
version = "0.2.0"
description = "IFAZ Widget Toolkit — widgets Python con temática táctico-militar sobre pywebview"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["gui", "widgets", "pywebview", "tactical", "ifaz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "pywebview>=5.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/iskg"
Repository = "https://github.com/tu-usuario/iskg"
Documentation = "https://github.com/tu-usuario/iskg#readme"

[project.optional-dependencies]
dev = [
    "ruff",
    "build",
    "twine",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
]

[tool.setuptools.packages.find]
include = ["iskg*"]
